@@ -1,6 +1,8 @@
 package com.nudge.config;
 
 import com.nudge.security.JwtAuthFilter;
+import com.nudge.security.RateLimitFilter;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -20,6 +22,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -27,6 +30,10 @@ import java.util.List;
  * - Stateless (JWT, no sessions)
  * - Public routes: /api/auth/**, /track/**
  * - Everything else requires a valid JWT
+ *
+ * S2: CORS locked to origins listed in app.cors.allowed-origins.
+ *     allowCredentials is NOT set (we use JWT in Authorization headers, not cookies).
+ * S5: RateLimitFilter runs before the JWT filter.
  */
 @Configuration
 @EnableWebSecurity
@@ -34,10 +41,18 @@ public class SecurityConfig {
 
     private final JwtAuthFilter jwtAuthFilter;
     private final UserDetailsService userDetailsService;
+    private final RateLimitFilter rateLimitFilter;
 
-    public SecurityConfig(JwtAuthFilter jwtAuthFilter, UserDetailsService userDetailsService) {
-        this.jwtAuthFilter = jwtAuthFilter;
+    /** S2: Injected from application.properties / env var */
+    @Value("${app.cors.allowed-origins:*}")
+    private String corsAllowedOrigins;
+
+    public SecurityConfig(JwtAuthFilter jwtAuthFilter,
+                          UserDetailsService userDetailsService,
+                          RateLimitFilter rateLimitFilter) {
+        this.jwtAuthFilter    = jwtAuthFilter;
         this.userDetailsService = userDetailsService;
+        this.rateLimitFilter  = rateLimitFilter;
     }
 
     @Bean
@@ -47,14 +62,13 @@ public class SecurityConfig {
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
-                // Public: auth endpoints and tracking pixel
                 .requestMatchers("/api/auth/**", "/track/**").permitAll()
-                // WebSocket handshake
                 .requestMatchers("/ws/**").permitAll()
-                // Everything else needs a valid JWT
                 .anyRequest().authenticated()
             )
             .authenticationProvider(authenticationProvider())
+            // S5: Rate limiter before JWT filter
+            .addFilterBefore(rateLimitFilter, UsernamePasswordAuthenticationFilter.class)
             .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -63,11 +77,20 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        // Allow frontend (served from file://) and the Chrome extension
-        config.setAllowedOriginPatterns(List.of("*"));
+
+        // S2: Read allowed origins from config — wildcards are fine because we
+        //     do NOT use allowCredentials(true) (we use JWT, not cookies).
+        List<String> origins = Arrays.asList(corsAllowedOrigins.split(","));
+        if (origins.size() == 1 && origins.get(0).equals("*")) {
+            config.setAllowedOriginPatterns(List.of("*"));
+        } else {
+            config.setAllowedOrigins(origins);
+        }
+
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
-        config.setAllowCredentials(true);
+        // NOT setting allowCredentials — we use JWT in Authorization headers, not cookies
+        config.setAllowCredentials(false);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
